feat: include leave email attachments and private image previews
